--- a/index.html
+++ b/index.html
@@ -41,11 +41,22 @@
 <p>
 <ul>
 
+<li> HWA-02, due Wed, Sep 8.
+<ul>
+<li> Read and understand [M, §§4--5].</li>
+<li> Read and think [M, §§6--7].</li>
+<li> Exercises from [M, §8]: 3, 6, 7, 13.
+</li>
+<li>Let \(\iota\) be a smooth involution of a smooth manifold \(M\). Show that each connected component of the fixed point set \(S\subset M\) of \(\iota\) is a submanifold.
+<br> (Scan to pdf and upload to CANVAS.)</li>
+</ul>
+</li>
+
 <li> HWA-01, due Mon, Aug 30.
 <ul>
 <li> Read and understand [M, §§1--3].</li>
 <li> Read and think [M, §§4--5].</li>
-<li> Exercises from [M, §8 ]: 9, 10, 11, 12.
+<li> Exercises from [M, §8]: 9, 10, 11, 12.
 </li>
 <li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
 <br> (Scan to pdf and upload to CANVAS.)</li>
