--- a/sil.html
+++ b/sil.html
@@ -17,7 +17,7 @@ Class:
 14:30--15:20  McAllister Bldg 113 (MWF)
 </li>
 <li>
-Office hours: <a href="https://psu.zoom.us/my/anton.petrunin"> psu.zoom.us/my/anton.petrunin</a> TBD, or by appointment.</li>
+Office hours: McAllister Building 333 AND/OR <a href="https://psu.zoom.us/my/anton.petrunin"> psu.zoom.us/my/anton.petrunin</a>, Wed, 15:30--16:20, or by appointment.</li>
 </dl>
 
 <p>
