--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     (Second edition)
     </dt>
     </dl>
-
+-->
     <dl>
     <dt>[W] Andrew Wallace,
     <em>Differential topology: First steps.</em>
     </dt>
     </dl>
--->
+
 
 </li>
     
@@ -53,6 +53,23 @@
 <hr color="#ccddcc" />
 <p>
 <ul>
+
+<li> HWA-04, due Mon, Sep 20.
+<ul>
+<li> Read [BC, Chapter 1];</li>
+<li> Read and think [W] starting from Chapter 4.</li>
+<li> Problems from [BC, Chapter 1]: 14, 19, 22;
+</li>
+<li> Prove the Jacobi identity \([[X,Y],Z]+[[Y,Z],X]+[[Z,X],Y]=0\) for any vector fields \(X,Y\), and \(Z\). 
+</li>
+<li> 
+Let \(f\) be a smooth function defined on a smooth manifold \(M\).
+Suppose \(p\) is a critical point of \(f\), and \(X,Y\) are vector fields on \(M\).
+Show that \((X(Yf))(p)\) depends only on \(X(p),Y(p)\in\mathrm{T}_pM\).<br>
+Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear form on \(\mathrm{T}_pM\);
+</li>
+</ul>
+</li>
 
 <li> HWA-03, due Mon, Sep 13.
 <ul>
