--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <em>Geometry of manifolds.</em>
     </dt>
     </dl>
+    
+    <dl>
+    <dt>[H] Nigel Hitchin,
+    <a href="https://people.maths.ox.ac.uk/hitchin/files/LectureNotes/Differentiable_manifolds/manifolds2014.pdf"> <em> Differentiable manifolds.</em></a>
+    </dt>
+    </dl>
 
     <dl>
     <dt>[M] John Milnor,
@@ -54,11 +60,27 @@
 <p>
 <ul>
 
+<li> HWA-05, due Mon, Sep 27.
+<ul>
+<li> Skim thru [W], prepare one question.</li>
+<li> Read and think [BC, Chapter 2].</li>
+<li> Construct a Morse function on \(\mathbb{R}\mathrm{P}^2\) with 3 critical points. Describe the sublevel sets of this function. Try to do the same for \(\mathbb{C}\mathrm{P}^2\).</li>
+<li> Let \(E\to B\) be a locally trivial smooth fibber bundle with fiber \(F\).
+Suppose that the base \(B\) admits a Morse function with \(m\) critical points and fiber \(F\) admits a Morse function with \(m\) critical points.
+Show that the total space \(E\) admits a Morse function with \(m+n\) critical points.
+</li>
+<li> Suppose that a compact connected manifold \(M\) admits a Morse function with \(n\) citical points of index 1 and \(m\) citical points of index 2.
+Show that the fundamental group of \(M\) admits a presentation with \(n\) generators and \(m\) relations.
+</li>
+<li> Problems from [BC, Chapter 2]: 10, 11.</li>
+</ul>
+</li>
+
 <li> HWA-04, due Mon, Sep 20.
 <ul>
 <li> Read [BC, Chapter 1];</li>
 <li> Read and think [W] starting from Chapter 4.</li>
-<li> Problems from [BC, Chapter 1]: 14, 19, 22;
+<li> Problems from [BC, Chapter 1]: 14, 19, 22.
 </li>
 <li> Prove the Jacobi identity \([[X,Y],Z]+[[Y,Z],X]+[[Z,X],Y]=0\) for any vector fields \(X,Y\), and \(Z\). 
 </li>
@@ -66,7 +88,7 @@
 Let \(f\) be a smooth function defined on a smooth manifold \(M\).
 Suppose \(p\) is a critical point of \(f\), and \(X,Y\) are vector fields on \(M\).
 Show that \((X(Yf))(p)\) depends only on \(X(p),Y(p)\in\mathrm{T}_pM\).<br>
-Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear form on \(\mathrm{T}_pM\);
+Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear form on \(\mathrm{T}_pM\).
 </li>
 </ul>
 </li>
@@ -79,7 +101,7 @@ Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear f
 <li> Suppose that \(f\colon M\to N\) is a smooth map between compact smooth oriented \(n\)-manifolds.
 Show that \(\mathrm{deg}f\) is the intersection number of the graph of \(f\) with a horizontal submanifold \(M\times x\subset M\times N\).
 </li>
-<li> Given \(n\in\mathbb{Z}\), construct a smooth 4-manifold with an embedded 2-sphere that has self-intersection number \(n\);
+<li> Given \(n\in\mathbb{Z}\), construct a smooth 4-manifold with an embedded 2-sphere that has self-intersection number \(n\).
 </li>
 <li> Let \(X\) and \(Y\) be submanifolds of \(M\).
 Show that \(X\) is transversal to \(Y\) if and only if \(X\times Y\subset M\times M\) is transversal to the diagonal \(\Delta=\{\,(x,x)\in M\times M\,\}\).
