--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <li> Skim thru [W], prepare one question.</li>
 <li> Read and think [BC, Chapter 2].</li>
 <li> Construct a Morse function on \(\mathbb{R}\mathrm{P}^2\) with 3 critical points. Describe the sublevel sets of this function. Try to do the same for \(\mathbb{C}\mathrm{P}^2\).</li>
-<li> Let \(E\to B\) be a locally trivial smooth fibber bundle with fiber \(F\).
+<li> Let \(E\to B\) be a smooth locally trivial fiber bundle with fiber \(F\).
 Suppose that the base \(B\) admits a Morse function with \(m\) critical points and fiber \(F\) admits a Morse function with \(m\) critical points.
 Show that the total space \(E\) admits a Morse function with \(m+n\) critical points.
 </li>
