--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <li> Construct a Morse function on \(\mathbb{R}\mathrm{P}^2\) with 3 critical points. Describe the sublevel sets of this function. Try to do the same for \(\mathbb{C}\mathrm{P}^2\).</li>
 <li> Let \(E\to B\) be a smooth locally trivial fiber bundle with fiber \(F\).
 Suppose that the base \(B\) admits a Morse function with \(m\) critical points and fiber \(F\) admits a Morse function with \(m\) critical points.
-Show that the total space \(E\) admits a Morse function with \(m+n\) critical points.
+Show that the total space \(E\) admits a Morse function with \(m{\cdot}n\) critical points.
 </li>
 <li> Suppose that a compact connected manifold \(M\) admits a Morse function with \(n\) citical points of index 1 and \(m\) citical points of index 2.
 Show that the fundamental group of \(M\) admits a presentation with \(n\) generators and \(m\) relations.
