--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
     <em>Geometry of manifolds.</em>
     </dt>
     </dl>
-    
+
     <dl>
+    <dt>[BG] Richard Bishop, Samuel Goldberg
+    <em>Tensor analysis on manifolds.</em>
+    </dt>
+    </dl>
+    
+ <!--   <dl>
     <dt>[H] Nigel Hitchin,
     <a href="https://people.maths.ox.ac.uk/hitchin/files/LectureNotes/Differentiable_manifolds/manifolds2014.pdf"> <em> Differentiable manifolds.</em></a>
     </dt>
     </dl>
-
+-->
     <dl>
     <dt>[M] John Milnor,
     <em>Topology from the Differentiable Viewpoint.</em>
@@ -59,6 +65,13 @@
 <hr color="#ccddcc" />
 <p>
 <ul>
+
+<li> HWA-06, due Mon, Oct 04.
+<ul>
+<li> Read [BG, 3.2 + 3.6]; skim thru the rest of Chapter 3; prepare one question.</li>
+<li> Problems from [BG]: 3.2.2, 3.6.1, 3.7.1, 3.7.2, 3.8.1.</li>
+</ul>
+</li>
 
 <li> HWA-05, due Mon, Sep 27.
 <ul>
