--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
     </dt>
     </dl>
 -->
-    <dl>
-    <dt>[M] John Milnor,
-    <em>Topology from the Differentiable Viewpoint.</em>
-    </dt>
-    </dl>
-<!--
+
     <dl>
     <dt>[L] John Lee,
     <em>Introduction to smooth manifolds.</em>
     (Second edition)
     </dt>
     </dl>
--->
+    
+    <dl>
+    <dt>[M] John Milnor,
+    <em>Topology from the Differentiable Viewpoint.</em>
+    </dt>
+    </dl>
+    
+
     <dl>
     <dt>[W] Andrew Wallace,
     <em>Differential topology: First steps.</em>
@@ -65,6 +67,15 @@
 <hr color="#ccddcc" />
 <p>
 <ul>
+
+<li> HWA-07, due Mon, Oct 11.
+<ul>
+<li> Read [L, Chapter 17].</li>
+<li> Problems from [L]: 14-5, 14-9, 17-10, 17-13.</li>
+<li> Let \(\alpha\) be a 2-covector on \(\mathbb{R}^4\). Show that \(\alpha\) is decomposabe if and only if \(\alpha\wedge\alpha=0\).
+</li>
+</ul>
+</li>
 
 <li> HWA-06, due Mon, Oct 04.
 <ul>
