--- a/index.html
+++ b/index.html
@@ -66,7 +66,71 @@
 </p>
 <hr color="#ccddcc" />
 <p>
+
 <ul>
+Questions for midterm (first approximation):
+<ol>
+<li>Sard's theorem: proof and the tranversality homotopy theorem, intersection  number.
+</li>
+<li>
+Degree: definitions and their equivalence, Brouwer fixed-point theorem.
+</li>
+<li>
+Vector fields: Lie bracket, integral curves, flows, Lie derivative, straightening lemma, Moser's trick.
+</li>
+<li>
+Morse lemma: 
+degenerate and nondegenerate critical points,
+product structure at noncritical levels,
+approximation by a Morse function, proof of the Morse lemma.
+</li>
+<li>
+Handle decomposition: rearrangement of handles, handle body decomposition of 3-manifolds (Heegaard splitting).
+</li>
+<li>
+Tensors: tangent, cotangent bundles, tensor fields, forms, Cartan's calculus.
+</li>
+<li>
+De Rham cohomology: definitions, homotopy invariance, Poincare's lemma.
+</li>
+<li>
+Calculation of De Rham cohomology via symmetry: manifolds with an action of compact Lie group;  bi-invarinat forms on compact Lie group.
+</li>
+<li>
+Mayer--Vietoris theorem: formulation + an application.
+</li>
+<li>
+Top cohomology and Poincare lemma with compact support.</li>
+</li>
+</ol>
+</ul>
+</p>
+
+<hr color="#ccddcc" />
+<p>
+<ul>
+
+<li> HWA-08, due Mon, Oct 18.
+<ul>
+<li> Let \(\alpha = xdx + ydy + zdz\) and \(\omega = dx \wedge dy \wedge dz\) be differential forms on \(\mathbb{R}^3\). 
+<br>
+(a) Write down a differential form  \(\beta\) on \(\mathbb{R}^3 \backslash 0\) such that \(\omega= \alpha\wedge \beta\).
+<br>
+(b) Show that there is no differential form \(\gamma\) on \(\mathbb{R}^3\) such that \(\omega= \alpha\wedge \gamma\).
+</li>
+<li>Let \(f\colon \mathbb{S}^{2{\cdot}n-1}\to \mathbb{S}^n\) for \(n \ge 2\), be a smooth map, and let \(\omega\) be an \(n\)-form on \(\mathbb{S}^n\) such that \(\int_{S^n}\omega = 1\). Show that \(f^* \omega\) is exact, and if \(f^* \omega= d\alpha\),  then the number 
+\(\int_{S^{2n-1}}\alpha\wedge d \alpha\) 
+is independent of the choice of \(\omega\) and \(\alpha\).
+</li>
+<li>Let \(\omega\) be a nowhere zero 1-form on a smooth compact manifold \(M\). Show that if \(\omega\wedge d\omega=0\) then there exists a 1-form  \(\alpha\) such that \(d\omega= \alpha\wedge \omega\). Hint: First do it locally and then use a partition of unity.
+</li>
+<li>Describe a homomorphism \(h:H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\to H^2_{dR}(\mathbb{T}^4)\) that cannot be realized as an induced homomorphism for a smooth map \(\mathbb{T}^4\to \mathbb{S}^2\times \mathbb{S}^2\) (here \(\mathbb{T}^4\) denotes 4-dimensional torus).
+</li>
+<li>
+Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2 )^n\) such that \(\omega^n \not= 0\) at any point of \(M\).
+</li>
+</ul>
+</li>
 
 <li> HWA-07, due Mon, Oct 11.
 <ul>
