--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 <li> Texts:
 
     <dl>
+    <dt>[B] Somnath Basu
+    <a href="GSS6.pdf"> <em>Cohomology of Lie groups and Lie algebras
+.</em></a>
+    </dt>
+    </dl>
+
+    <dl>
     <dt>[BC] Richard Bishop, Richard Crittenden
     <em>Geometry of manifolds.</em>
     </dt>
@@ -94,10 +101,10 @@ Handle decomposition: rearrangement of handles, handle body decomposition of 3-m
 Cartan's calculus.
 </li>
 <li>
-De Rham cohomology: definitions, homotopy invariance, Poincaré's lemma.
+De Rham cohomology: definitions, homotopy invariance, cup-product, Poincaré's lemma.
 </li>
 <li>
-Calculation of De Rham cohomology via symmetry: manifolds with an action of compact Lie group;  bi-invarinat forms on compact Lie group.
+Calculation of De Rham cohomology via symmetry: manifolds with an action of compact Lie group;  bi-invarinat forms on compact Lie group. [B, up to Lemma 2.4]
 </li>
 <li>
 Mayer--Vietoris theorem: formulation + an application.
