--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ Questions for midterm (first approximation):
 Degree: definitions and their equivalence, Brouwer fixed-point theorem.
 </li>
 <li>
-Vector fields: integral curves, flows, Moser's trick, straightening lemma, definition of Lie derivative of tensor fields.
+Vector fields: integral curves, flows, Moser's trick, straightening lemma [L 9.22], definition of Lie derivative of tensor fields.
 </li>
 <li>
-Lie bracket and Lie derivative, straightening lemma for commuting fields.
+Lie bracket and Lie derivative, straightening lemma for commuting fields [L 9.46] OR [BG 3.7.1].
 </li>
 <li>
 Morse lemma: 
