--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 <p>
 
 <ul>
-Questions for midterm (first approximation):
+Presentations:
 <ol>
-<li>Sard's theorem: proof and the tranversality homotopy theorem, intersection  number.
+<li> <em>(Zelong)</em> Sard's theorem: proof and the tranversality homotopy theorem, intersection  number.
 </li>
 <li>
 Degree: definitions and their equivalence, Brouwer fixed-point theorem.
@@ -85,7 +85,7 @@ Degree: definitions and their equivalence, Brouwer fixed-point theorem.
 <li>
 Vector fields: integral curves, flows, Moser's trick, straightening lemma [L 9.22], definition of Lie derivative of tensor fields.
 </li>
-<li>
+<li> <em>(Safaan)</em>
 Lie bracket and Lie derivative, straightening lemma for commuting fields [L 9.46] OR [BG 3.7.1].
 </li>
 <li>
@@ -97,7 +97,7 @@ approximation by a Morse function, proof of the Morse lemma.
 <li>
 Handle decomposition: rearrangement of handles, handle body decomposition of 3-manifolds (Heegaard splitting).
 </li>
-<li>
+<li> <em>(Safaan)</em>
 Cartan's calculus.
 </li>
 <li>
