--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@ Handle decomposition: rearrangement of handles, handle body decomposition of 3-m
 <li> <em>(Safaan)</em>
 Cartan's calculus.
 </li>
-<li>
+<li> <em>(Nicolas)</em>
 De Rham cohomology: definitions, homotopy invariance, cup-product, Poincaré's lemma.
 </li>
 <li>
 Calculation of De Rham cohomology via symmetry: manifolds with an action of compact Lie group;  bi-invarinat forms on compact Lie group. [B, up to Lemma 2.4]
 </li>
-<li>
+<li> <em>(Zelong)</em>
 Mayer--Vietoris theorem: formulation + an application.
 </li>
 <li>
