--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Calculation of De Rham cohomology via symmetry: manifolds with an action of comp
 <li> <em>(Zelong)</em>
 Mayer--Vietoris theorem: formulation + an application.
 </li>
-<li>
+<li><em>(Nicolas)</em>
 Top cohomology and Poincaré lemma with compact support.</li>
 </li>
 </ol>
