--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Presentations:
 <ol>
 <li> <em>(Zelong)</em> Sard's theorem: proof and the tranversality homotopy theorem, intersection  number.
 </li>
-<li>
+<li><em>(Nicholas)</em>
 Degree: definitions and their equivalence, Brouwer fixed-point theorem.
 </li>
 <li>
