--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Cartan's calculus.
 <li> <em>(Nicolas)</em>
 De Rham cohomology: definitions, homotopy invariance, cup-product, Poincaré's lemma.
 </li>
-<li>
+<li><em>(Hannah)</em>
 Calculation of De Rham cohomology via symmetry: manifolds with an action of compact Lie group;  bi-invarinat forms on compact Lie group. [B, up to Lemma 2.4]
 </li>
 <li> <em>(Zelong)</em>
