--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@ Vector fields: integral curves, flows, Moser's trick, straightening lemma [L 9.2
 <li> <em>(Safaan)</em>
 Lie bracket and Lie derivative, straightening lemma for commuting fields [L 9.46] OR [BG 3.7.1].
 </li>
-<li>
+<li><em>(Hannah)</em>
 Morse lemma: 
 degenerate and nondegenerate critical points,
 product structure at noncritical levels,
 approximation by a Morse function, proof of the Morse lemma.
 </li>
-<li>
+<li><em>(Nicholas)</em>
 Handle decomposition: rearrangement of handles, handle body decomposition of 3-manifolds (Heegaard splitting).
 </li>
 <li> <em>(Safaan)</em>
