--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@ Presentations:
 <ol>
 <li> <em>(Zelong)</em> Sard's theorem: proof and the tranversality homotopy theorem, intersection  number.
 </li>
-<li><em>(Nicholas)</em>
+<li> <em>(Nicholas)</em>
 Degree: definitions and their equivalence, Brouwer fixed-point theorem.
 </li>
-<li>
+<li> <em>(Zelong)</em>
 Vector fields: integral curves, flows, Moser's trick, straightening lemma [L 9.22], definition of Lie derivative of tensor fields.
 </li>
 <li> <em>(Safaan)</em>
 Lie bracket and Lie derivative, straightening lemma for commuting fields [L 9.46] OR [BG 3.7.1].
 </li>
-<li><em>(Hannah)</em>
+<li> <em>(Hannah)</em>
 Morse lemma: 
 degenerate and nondegenerate critical points,
 product structure at noncritical levels,
 approximation by a Morse function, proof of the Morse lemma.
 </li>
-<li><em>(Nicholas)</em>
+<li> <em>(Nicholas)</em>
 Handle decomposition: rearrangement of handles, handle body decomposition of 3-manifolds (Heegaard splitting).
 </li>
 <li> <em>(Safaan)</em>
@@ -103,13 +103,13 @@ Cartan's calculus.
 <li> <em>(Nicolas)</em>
 De Rham cohomology: definitions, homotopy invariance, cup-product, Poincaré's lemma.
 </li>
-<li><em>(Hannah)</em>
+<li> <em>(Hannah)</em>
 Calculation of De Rham cohomology via symmetry: manifolds with an action of compact Lie group;  bi-invarinat forms on compact Lie group. [B, up to Lemma 2.4]
 </li>
 <li> <em>(Zelong)</em>
 Mayer--Vietoris theorem: formulation + an application.
 </li>
-<li><em>(Nicolas)</em>
+<li> <em>(Nicolas)</em>
 Top cohomology and Poincaré lemma with compact support.</li>
 </li>
 </ol>
