--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </dl>
     
     <dl>
-    <dt>[SR] Bruno Scardua, Carlos Rojas,
+    <dt>[SM] Bruno Scardua, Carlos Morales,
     <em>Geometry, dynamics and topology of foliations.</em>
     </dt>
     </dl>
@@ -85,7 +85,7 @@
 
 <li> HWA-09, due Mon, Nov 15.
 <ul>
-<li> Start to read [SR].
+<li> Start to read [SM].
 </li>
 </ul>
 </li>
