--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     <em>Tensor analysis on manifolds.</em>
     </dt>
     </dl>
+ 
+    <dl>
+    <dt>[EM] Yakov Eliashberg, Nikolai Mishachev
+    <em>Introduction to the h-principle.</em>
+    </dt>
+    </dl>
+
     
  <!--   <dl>
     <dt>[H] Nigel Hitchin,
