--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
 <p>
 <ul>
 
+<li> HWA-10, due Mon, Nov 29.
+<ul>
+  <li> Read Chapters 1--5 in [SM].</li>
+  <li> Exercises from [SM]: 1.2.3, 1.2.4, 1.2.6, 2.4.1, 4.3.1</li>
+</ul>
+</li>
+
 <li> HWA-09, due Mon, Nov 15.
 <ul>
 <li> Start to read [SM].
