--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 -->
 
     <dl>
+    <dt>[K] Alexander Kupers,
+    <a href="https://people.math.harvard.edu/~kupers/teaching/272x/book.pdf"> <em> Lectures on diffeomorphism groups of manifolds.</em></a>
+    </dt>
+    </dl>
+
+    <dl>
     <dt>[L] John Lee,
     <em>Introduction to smooth manifolds.</em>
     (Second edition)
@@ -92,7 +98,7 @@
 
 <li> HWA-10, due Mon, Nov 29.
 <ul>
-  <li> Read Chapters 1--5 in [SM].</li>
+  <li> Read Chapters 1--5 in [SM] + Chapter 7 in [K].</li>
   <li> Exercises from [SM]: 1.2.3, 1.2.4, 1.2.6, 2.4.1, 4.3.1</li>
 </ul>
 </li>
