--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
     <em>Differential topology: First steps.</em>
     </dt>
     </dl>
+    
+    <dl>
+    <dt>
+    <em><a href="https://anton-petrunin.github.io/530/tex/lectures.pdf"> <em> Extra 4 lectures.</em></a></em>
+    </dt>
+    </dl>
 
 
 </li>
