--- a/sil.html
+++ b/sil.html
@@ -14,18 +14,15 @@ Instructor:
 <a href="https://anton-petrunin.github.io/"> Anton Petrunin</a></li>
 <li>
 Class: 
-14:30--15:20  McAllister Bldg 113 (MWF)
+09:05--10:20 McAllister Bldg 114 (TuTh)
 </li>
 <li>
-Office hours: McAllister Building 333 AND/OR <a href="https://psu.zoom.us/my/anton.petrunin"> psu.zoom.us/my/anton.petrunin</a>, Wed, 15:30--16:20, or by appointment.</li>
+Office hours: McAllister Building 333 AND/OR <a href="https://psu.zoom.us/my/anton.petrunin"> psu.zoom.us/my/anton.petrunin</a>, Tu, 10:30--11:20, or by appointment.</li>
 </dl>
 
 <p>
 All Penn State Policies regarding ethics and honorable behavior
 apply to this course.
 </p>
-
-<p>
-COVID-19 related requirements include masking and social distancing. 
-</p> 
+ 
 </body></html>
