--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear f
 <li> HWA-03, due Mon, Sep 13.
 <ul>
 <li> Read and think [BC, Chapter 1].</li>
-<li> Exercises from [M, §8]: 14, 15.
+<li> Exercises from [M, §8]: 14, 15,6, 7, 13, 11, 12.
 </li>
 <li> Suppose that \(f\colon M\to N\) is a smooth map between compact smooth oriented \(n\)-manifolds.
 Show that \(\mathrm{deg}f\) is the intersection number of the graph of \(f\) with a horizontal submanifold \(M\times x\subset M\times N\).
@@ -275,25 +275,33 @@ Show that \(\mathrm{deg}f\) is the intersection number of the graph of \(f\) wit
 <li> Given \(n\in\mathbb{Z}\), construct a smooth 4-manifold with an embedded 2-sphere that has self-intersection number \(n\).
 </li>
 <li> Let \(X\) and \(Y\) be submanifolds of \(M\).
-Show that \(X\) is transversal to \(Y\) if and only if \(X\times Y\subset M\times M\) is transversal to the diagonal \(\Delta=\{\,(x,x)\in M\times M\,\}\).
-<br> (Scan to pdf and upload to CANVAS.)</li>
-</ul>
-</li>
-
-<li> HWA-02, due Wed, Sep 8.
-<ul>
-<li> Read and understand [M, §§4--5].</li>
-<li> Read and think [M, §§6--7].</li>
-<li> Exercises from [M, §8]: 3, 6, 7, 13, 11, 12.
-</li>
-<li>Let \(f\) be a smooth on \(\mathbb{R}^2\).
-Suppose \(S\) is a connected set such that \(d_xf=0\) for any \(x\in S\).
-</li>
+Show that \(X\) is transversal to \(Y\) if and only if \(X\times Y\subset M\times M\) is transversal to the diagonal \(\Delta=\{\,(x,x)\in M\times M\,\}\).</li>
 <li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
 <br> (Scan to pdf and upload to CANVAS.)</li>
 </ul>
 </li>
 -->
+
+<li> HWA-02, due Tue, Sep 10.
+<ul>
+<li> Read and understand [M, §§3--5].</li>
+<li> Read and think [M, §§6--7].</li>
+<li> Exercises from [M, §8]: 4, 5.
+</li>
+<li>Let \(f\) be a smooth function on \(\mathbb{R}^2\).
+Suppose \(S\) is a connected set such that \(d_xf=0\) for any \(x\in S\).
+Show that \(f\) is constant on \(S\).
+</li>
+<li>Prove a Baire-category version of Sard's lemma: 
+The set of critical values of a smooth map \(f\colon M\to N\) between smooth manifolds a countable union of compact nowhere dense sets.
+</li>
+<li>Let \(\iota\) be a smooth involution of a smooth connected manifold \(M\).
+Assume \(\iota(x)=x\) and \(d_x\iota=\mathrm{id}_{\mathrm{T}_x}\) for some \(x\in M\).
+Show that \(\iota=\mathrm{id}_M\).
+<br> (Scan to pdf and upload to CANVAS.)</li>
+</ul>
+</li>
+
 
 <li> HWA-01, due Tue, Sep 3.
 <ul>
