--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <a href="GSS6.pdf"> <em>Cohomology of Lie groups and Lie algebras.</em></a>
     </dt>
     </dl>
-
+-->
     <dl>
     <dt>[BC] Richard Bishop, Richard Crittenden
     <em>Geometry of manifolds.</em>
     </dt>
     </dl>
-
+<!--
     <dl>
     <dt>[BG] Richard Bishop, Samuel Goldberg
     <em>Tensor analysis on manifolds.</em>
     </dt>
     </dl>
- 
+  
     <dl>
     <dt>[EM] Yakov Eliashberg, Nikolai Mishachev
     <em>Introduction to the h-principle.</em>
@@ -253,21 +253,25 @@ Show that the fundamental group of \(M\) admits a presentation with \(n\) genera
 <li> Read and think [W] starting from Chapter 4.</li>
 <li> Problems from [BC, Chapter 1]: 14, 19, 22.
 </li>
+<li> Exercises from [M, §8]:  7, 11, 12, 14, 15.
+</li>
 <li> Prove the Jacobi identity \([[X,Y],Z]+[[Y,Z],X]+[[Z,X],Y]=0\) for any vector fields \(X,Y\), and \(Z\). 
 </li>
 <li> 
 Let \(f\) be a smooth function defined on a smooth manifold \(M\).
 Suppose \(p\) is a critical point of \(f\), and \(X,Y\) are vector fields on \(M\).
 Show that \((X(Yf))(p)\) depends only on \(X(p),Y(p)\in\mathrm{T}_pM\).<br>
-Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear form on \(\mathrm{T}_pM\).
+Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear form on \(\mathrm{T}_pM\).</li>
+<li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
 </li>
 </ul>
 </li>
+-->
 
-<li> HWA-03, due Mon, Sep 13.
+<li> HWA-03, due Tue, Sep 17.
 <ul>
-<li> Read and think [BC, Chapter 1].</li>
-<li> Exercises from [M, §8]: 14, 15,6, 7, 13, 11, 12.
+<li> Read and think [BC, Chapter 1] OR [L, Chapter 8].</li>
+<li> Exercises from [M, §8]:  6, 13.
 </li>
 <li> Suppose that \(f\colon M\to N\) is a smooth map between compact smooth oriented \(n\)-manifolds.
 Show that \(\mathrm{deg}f\) is the intersection number of the graph of \(f\) with a horizontal submanifold \(M\times x\subset M\times N\).
@@ -275,12 +279,12 @@ Show that \(\mathrm{deg}f\) is the intersection number of the graph of \(f\) wit
 <li> Given \(n\in\mathbb{Z}\), construct a smooth 4-manifold with an embedded 2-sphere that has self-intersection number \(n\).
 </li>
 <li> Let \(X\) and \(Y\) be submanifolds of \(M\).
-Show that \(X\) is transversal to \(Y\) if and only if \(X\times Y\subset M\times M\) is transversal to the diagonal \(\Delta=\{\,(x,x)\in M\times M\,\}\).</li>
-<li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
-<br> (Scan to pdf and upload to CANVAS.)</li>
+Show that \(X\) is transversal to \(Y\) if and only if \(X\times Y\subset M\times M\) is transversal to the diagonal \(\Delta=\{\,(x,x)\in M\times M\,\}\).
+<br> (ATTENTION: Upload to <a href="http://gradescope.com/">gradescope.com</a> before 9:05am, Tue, Sep 17.
+Use this code to find the course:  J78Y76.
+When uploading, split it into the separate problems.)</li>
 </ul>
 </li>
--->
 
 <li> HWA-02, due Tue, Sep 10.
 <ul>
