HWA-04 + t.me/math528F2024

--- a/index.html
+++ b/index.html
@@ -243,17 +243,19 @@ Show that the total space \(E\) admits a Morse function with \(m{\cdot}n\) criti
 <li> Suppose that a compact connected manifold \(M\) admits a Morse function with \(n\) citical points of index 1 and \(m\) citical points of index 2.
 Show that the fundamental group of \(M\) admits a presentation with \(n\) generators and \(m\) relations.
 </li>
-<li> Problems from [BC, Chapter 2]: 10, 11.</li>
-</ul>
-</li>
-
-<li> HWA-04, due Mon, Sep 20.
-<ul>
-<li> Read [BC, Chapter 1];</li>
-<li> Read and think [W] starting from Chapter 4.</li>
-<li> Problems from [BC, Chapter 1]: 14, 19, 22.
+<li> Problems from [BC, Chapter 2]: 10, 11., 19, 22</li>
+<li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
 </li>
 <li> Exercises from [M, §8]:  7, 11, 12, 14, 15.
+</li>
+<li> Read and think [W] starting from Chapter 4.</li>
+</ul>
+</li>
+-->
+<li> HWA-04, due Tue, Sep 24.
+<ul>
+<li> Read [BC, Chapter 1] OR [L, Chapter 8].</li>
+<li> Problem from [BC, Chapter 1]: 14.
 </li>
 <li> Prove the Jacobi identity \([[X,Y],Z]+[[Y,Z],X]+[[Z,X],Y]=0\) for any vector fields \(X,Y\), and \(Z\). 
 </li>
@@ -262,11 +264,18 @@ Let \(f\) be a smooth function defined on a smooth manifold \(M\).
 Suppose \(p\) is a critical point of \(f\), and \(X,Y\) are vector fields on \(M\).
 Show that \((X(Yf))(p)\) depends only on \(X(p),Y(p)\in\mathrm{T}_pM\).<br>
 Furthermore, the map \((X(p),Y(p))\mapsto X(Y(f))(p)\) is a symmetric bilinear form on \(\mathrm{T}_pM\).</li>
-<li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
+<li>Let \(X,Y\) be vector fields on a smooth 2-dimensional manifold \(M\).
+Suppose \(X(p)\) and \(Y(p)\) are linearly independent at \(p\in M\).
+Construct a local coordinate system at \(p\) so that the vector fields are tangent to its coordinate lines.
+</li>
+<li>
+Show that one cannot do the same in higher dimensions.
+That is, find three vector fields \(X,Y,Z\) on a smooth 3-dimensional manifold \(M\) such that \(X(p)\), \(Y(p)\), and \(Z(p)\) form a basis in \(\mathrm{T}_p\), but there is no chart at \(p\) with these vector fields tangent to its coordinate lines.
+<br>
+Upload to <a href="http://gradescope.com/">gradescope.com</a> before 9:05am, Tue, Sep 24.
 </li>
 </ul>
 </li>
--->
 
 <li> HWA-03, due Tue, Sep 17.
 <ul>
