--- a/sil.html
+++ b/sil.html
@@ -17,7 +17,7 @@ Class:
 09:05--10:20 McAllister Bldg 113 (TuTh)
 </li>
 <li>
-Office hours: McAllister Building 333 AND/OR <a href="https://psu.zoom.us/my/anton.petrunin"> psu.zoom.us/my/anton.petrunin</a>, Tu, 10:30--11:20, or by appointment.</li>
+Office hours: McAllister Building 333 AND/OR <a href="https://t.me/math528F2024">t.me/math528F2024</a>, Tu, 10:30--11:20, or by appointment.</li>
 </dl>
 
 <p>
