--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <em>Geometry of manifolds.</em>
     </dt>
     </dl>
-<!--
+
     <dl>
     <dt>[BG] Richard Bishop, Samuel Goldberg
     <em>Tensor analysis on manifolds.</em>
     </dt>
     </dl>
-  
+<!--
     <dl>
     <dt>[EM] Yakov Eliashberg, Nikolai Mishachev
     <em>Introduction to the h-principle.</em>
@@ -226,15 +226,10 @@ Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2 )^n\) such that \(\o
 
 <li> HWA-06, due Mon, Oct 04.
 <ul>
-<li> Read [BG, 3.2 + 3.6]; skim thru the rest of Chapter 3; prepare one question.</li>
-<li> Problems from [BG]: 3.2.2, 3.6.1, 3.7.1, 3.7.2, 3.8.1.</li>
-</ul>
-</li>
-
-<li> HWA-05, due Mon, Sep 27.
-<ul>
-<li> Skim thru [W], prepare one question.</li>
 <li> Read and think [BC, Chapter 2].</li>
+<li> Problems from [BC, Chapter 2]: 10, 11.</li>
+<li> Skim thru [W], prepare one question.</li>
+<li> Read and think [W] starting from Chapter 4.</li>
 <li> Construct a Morse function on \(\mathbb{R}\mathrm{P}^2\) with 3 critical points. Describe the sublevel sets of this function. Try to do the same for \(\mathbb{C}\mathrm{P}^2\).</li>
 <li> Let \(E\to B\) be a smooth locally trivial fiber bundle with fiber \(F\).
 Suppose that the base \(B\) admits a Morse function with \(m\) critical points and fiber \(F\) admits a Morse function with \(m\) critical points.
@@ -243,15 +238,19 @@ Show that the total space \(E\) admits a Morse function with \(m{\cdot}n\) criti
 <li> Suppose that a compact connected manifold \(M\) admits a Morse function with \(n\) citical points of index 1 and \(m\) citical points of index 2.
 Show that the fundamental group of \(M\) admits a presentation with \(n\) generators and \(m\) relations.
 </li>
-<li> Problems from [BC, Chapter 2]: 10, 11., 19, 22</li>
 <li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
 </li>
-<li> Exercises from [M, §8]:  7, 11, 12, 14, 15.
-</li>
-<li> Read and think [W] starting from Chapter 4.</li>
 </ul>
 </li>
 -->
+<li> HWA-05, due Tue, Oct 1.
+<ul>
+<li> Read [BG, 3.2 + 3.6]; skim thru the rest of Chapter 3; prepare one question.</li>
+<li> Problems from [BG]: 3.2.2, 3.6.1, 3.7.1, 3.7.2, 3.8.1.</li>
+</ul>
+</li>
+
+
 <li> HWA-04, due Tue, Sep 24.
 <ul>
 <li> Read [BC, Chapter 1] OR [L, Chapter 8].</li>
@@ -320,7 +319,7 @@ Show that \(\iota=\mathrm{id}_M\).
 <ul>
 <li> Read and understand [L, profs of C.34 and C.35] and [M, §§1--2].</li>
 <li> Read and think [M, §§3--5 and Appendix].</li>
-<li> Exercises from [M, §8]: 9, 10, 3.
+<li> Exercises from [M, §8]: 9, 10, 3. <!--7, 11, 12, 14, 15, 19, 22.-->
 </li>
 <li>Let \(\iota\) be a smooth involution of a smooth manifold \(M\).
 Show that each connected component of the fixed-point set \(S\subset M\) of \(\iota\) is a submanifold.
