--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Show that the fundamental group of \(M\) admits a presentation with \(n\) genera
 <li> HWA-05, due Tue, Oct 1.
 <ul>
 <li> Read [BG, 3.2 + 3.6]; skim thru the rest of Chapter 3; prepare one question.</li>
-<li> Problems from [BG]: 3.2.2, 3.6.1, 3.7.1, 3.7.2, 3.8.1.</li>
+<li> Problems from [BG]: 3.2.1, 3.2.2, 3.6.1, 3.7.1, <del>3.7.2,</del> 3.8.1.</li>
 </ul>
 </li>
 
