--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@ Mayer--Vietoris theorem: formulation + an application.
 <li> <em>(Nicolas)</em>
 Top cohomology and Poincaré lemma with compact support.</li>
 </li>
+<li>The position of a car in the plane is determined by three parameters: two coordinates \(x\) and \(y\) for the location (a good choice is the location of the midpoint between the back wheels) and an angle \(\alpha\) which describes the orientation of the car.
+The motion of the car satisfies the equation \(\dot x \sin\alpha=\dot y\cos \alpha\).<br>
+Reformulate this in terms of a plane distribution on a 3-dimensional manifold.
+Is this distribution involutive and/or integrable?
+</li>
 </ol>
 </ul>
 </p>
@@ -219,8 +224,7 @@ Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2 )^n\) such that \(\o
 <ul>
 <li> Read [L, Chapter 17].</li>
 <li> Problems from [L]: 14-5, 14-9, 17-10, 17-13.</li>
-<li> Let \(\alpha\) be a 2-covector on \(\mathbb{R}^4\). Show that \(\alpha\) is decomposabe if and only if \(\alpha\wedge\alpha=0\).
-</li>
+
 </ul>
 </li>
 
@@ -243,6 +247,25 @@ Show that the fundamental group of \(M\) admits a presentation with \(n\) genera
 </ul>
 </li>
 -->
+
+<li> HWA-06, due Tue, Oct 8.
+<ul>
+<li> Read [BC, 4.1--4.4]  </li>
+<li> Problems [BG, 3.6.7].</li>
+<li>
+Describe the cross product as a tensor on \(\mathbb{R}^3\).
+Let \(\tau\) be the corresponding tensor field on \(\mathbb{R}^3\).
+Find the components of \(\tau\) in spherical coordinates.</li>
+<li> Let \(\alpha_1,\dots, \alpha_k\) be linearly independent covectors.
+Suppose that for some covectors \(\beta_1,\dots, \beta_k\) we have
+\(\sum_i\beta_i\wedge\alpha_i=0\)
+show that each \(\beta_i\) is a linear combination of \(\alpha_1,\dots, \alpha_k\).</li>
+<li> Show that any 2-covector \(\vartheta\) can be written as a sum \(\sum_i\alpha_i\wedge\beta_i\) for linearly independent covectors \(\alpha_1,\dots, \alpha_k,\beta_1,\dots, \beta_k\)</li>
+<li> Let \(\vartheta\) be a 2-covector. Show that \(\vartheta\wedge\vartheta=0\) if and only if \(\vartheta\) is decomposabe; that is, \(\vartheta=\alpha\wedge \beta\) for some covectors \(\alpha\) and \(\beta\).
+</li>
+</ul>
+</li>
+
 <li> HWA-05, due Tue, Oct 1.
 <ul>
 <li> Read [BG, 3.2 + 3.6]; skim thru the rest of Chapter 3; prepare one question.</li>
