--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@ Show that the fundamental group of \(M\) admits a presentation with \(n\) genera
 <li> HWA-06, due Tue, Oct 8.
 <ul>
 <li> Read [BC, 4.1--4.4]  </li>
-<li> Problems [BG, 3.6.7].</li>
+<li> [BG, Problem 3.6.7].</li>
 <li>
 Describe the cross product as a tensor on \(\mathbb{R}^3\).
 Let \(\tau\) be the corresponding tensor field on \(\mathbb{R}^3\).
 Find the components of \(\tau\) in spherical coordinates.</li>
 <li> Let \(\alpha_1,\dots, \alpha_k\) be linearly independent covectors.
-Suppose that for some covectors \(\beta_1,\dots, \beta_k\) we have
-\(\sum_i\beta_i\wedge\alpha_i=0\)
-show that each \(\beta_i\) is a linear combination of \(\alpha_1,\dots, \alpha_k\).</li>
+Suppose that \(\sum_i\alpha_i\wedge\beta_i=0\)
+for some covectors \(\beta_1,\dots, \beta_k\).
+Show that each \(\beta_i\) is a linear combination of \(\alpha_1,\dots, \alpha_k\).</li>
 <li> Show that any 2-covector \(\vartheta\) can be written as a sum \(\sum_i\alpha_i\wedge\beta_i\) for linearly independent covectors \(\alpha_1,\dots, \alpha_k,\beta_1,\dots, \beta_k\)</li>
 <li> Let \(\vartheta\) be a 2-covector. Show that \(\vartheta\wedge\vartheta=0\) if and only if \(\vartheta\) is decomposabe; that is, \(\vartheta=\alpha\wedge \beta\) for some covectors \(\alpha\) and \(\beta\).
 </li>
