--- a/index.html
+++ b/index.html
@@ -222,15 +222,13 @@ Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2 )^n\) such that \(\o
 
 <li> HWA-07, due Mon, Oct 11.
 <ul>
-<li> Read [L, Chapter 17].</li>
-<li> Problems from [L]: 14-5, 14-9, 17-10, 17-13.</li>
-
 </ul>
 </li>
 
 <li> HWA-06, due Mon, Oct 04.
 <ul>
 <li> Read and think [BC, Chapter 2].</li>
+<li> Problems from [L]:  17-10, 17-13.</li>
 <li> Problems from [BC, Chapter 2]: 10, 11.</li>
 <li> Skim thru [W], prepare one question.</li>
 <li> Read and think [W] starting from Chapter 4.</li>
@@ -244,9 +242,38 @@ Show that the fundamental group of \(M\) admits a presentation with \(n\) genera
 </li>
 <li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
 </li>
+<li>Let \(\omega\) be an \(n\)-form on an oriented closed connected \(n\)-dimensional manifold \(M\).
+Show that \(\omega\) is exact if and only if \(\int_M\omega=0\).
+<br>
+(Hint: first use induction on \(n\) to show that if \(\omega\) be an \(n\)-form on \(\mathbb{R}^n\) with comact support, then \(\omega\) is exact if and only if \(\int_{\mathbb{R}^n}\omega=0\)).
+</li>
 </ul>
 </li>
 -->
+
+<li> HWA-07, due Tue, Oct 15.
+<ul>
+<li> Read [L, first 3 sections in Chapter 16].</li>
+<li> Prove that the following identities 
+<ul>
+<li>\(\mathcal{L}_Xd\omega = d\mathcal{L}_X \omega,\)</li>
+<li>\(\mathcal{L}_X i_Y\omega- i_Y\mathcal{L}_X\omega  = i_{[X,Y]}\omega,\)</li>
+<li>\(i_X i_Y\omega+ i_Yi_X\omega  = 0\)</li>
+</ul>
+hold for any differential form \(\omega\) and any vector fields \(X\) and \(Y\).
+(Try to do it directly from the definitions.)
+</li>
+<li>
+Let \(\alpha\) be a 1-form and let \(X\) and \(Y\) be vector fields on a smooth manifold.
+Express \((d\alpha)(X,Y)\) in terms of \(X\bigl(\alpha(Y)\bigr)\), \(Y\bigl(\alpha(X)\bigr)\), and \(\alpha([X,Y])\)
+</li>
+<li>Show that the form \(\alpha = \frac{x\cdot dy - y\cdot dx}{x^2+y^2}\) on \(\mathbb{R}^2\backslash \{0\}\) is closed but not exact.
+</li>
+<li>Let \(\omega\) be a volume form on a closed connected \(n\)-dimensional manifold \(M\); that is, \(\omega\) is a nonvanishing \(n\)-form.
+Show that for any \((n-1)\)-form \(\eta\) there is a unique vector field \(V\) on \(M\) such that \(i_V\omega=\eta\).
+</li>
+<li> Problem 14-9 from [L] (submersion = all points are regular).</li>
+</ul>
 
 <li> HWA-06, due Tue, Oct 8.
 <ul>
